<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>

    <include layout="@layout/action_bar" android:id="@+id/action_barGiris"/>
    <TextView
            android:id="@+id/lblInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/giris_yap"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:layout_below="@id/action_barGiris"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
    />
    <EditText
            android:id="@+id/txtMailGiris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblInfo"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
    />
    <EditText
            android:id="@+id/txtParolaGiris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtMailGiris"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/parola"
            android:inputType="textPassword"
    />
    <Button
            android:id="@+id/btnGirisYap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#4A235A"
            android:layout_marginBottom="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/giris_yapin"
            android:textColor="#ECF0F1"
    />

</RelativeLayout>