<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="75dp"
            android:background="@drawable/scrollview"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
        >

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/isim"
                    android:textSize="20sp"
                    android:layout_marginStart="25dp"
            />
            <EditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:inputType="text"
                    android:background="@drawable/textboxes"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hedef"
                    android:textSize="20sp"
                    android:layout_marginStart="25dp"
            />
            <EditText
                    android:id="@+id/txtHedef"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:inputType="text"
                    android:background="@drawable/textboxes"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bir_renk_sec"
                    android:textSize="20sp"
                    android:layout_marginStart="25dp"
            />
            <Button
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="#F1948A"
            />
            <Button
                    android:id="@+id/btnKaydet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textboxes"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="75dp"
                    android:text="@string/kaydet"
                    android:textSize="20sp"
            />
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/menu" android:id="@+id/menu"/>
</RelativeLayout>